# rojava

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
frontend/: .gitignore  Cargo.toml  index.html
frontend/src/: components.rs  main.rs
frontend/src/components/: basic_button.rs  file_menu.rs  text_editor.rs  use_state.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: code-editor.js  code-editor.tsx
