[package]
name = "rojava-frontend"
description = "Frontend for the rojava IDE written with Yew."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
js-sys = "0.3.58"
material-yew = { version = "0.2.0", features = ["full"] }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
web-sys = "0.3.58"
yew = "0.19.3"
